--- a/environment.yml
+++ b/environment.yml
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - python=3.10
   - pip
-  - pytorch
+  - pytorch=2.5.1
   - torchvision
   - torchaudio
   - pytorch-cuda=12.1
